# KippAChange

./: .gitignore  README.md  docker-compose.yml
Gateway/: Dockerfile  package-lock.json  package.json
Gateway/src/: app.module.ts
MS-Auth/: Dockerfile  package-lock.json  package.json
MS-Auth/src/: app.graphql  app.module.ts
MS-Auth/src/auth/: auth.controller.ts  auth.module.ts  auth.resolver.ts  auth.service.ts
MS-Auth/src/auth/decorator/: current-user.decorator.ts
MS-Auth/test/unit/: auth.resolver.spec.ts  auth.service.spec.ts
MS-Bet/: Dockerfile  main.py  pyproject.toml
MS-Bet/src/MBManager/: __init__.py
MS-Bet/src/models/: __init__.py  bets.py
MS-Calendar/: .env.example  .gitignore  Dockerfile  calendar.db  docker-compose.yml  init-db.sql  requirements.txt  run.py  seed_data.py
MS-Calendar/src/MBManager/: __init__.py
MS-Calendar/src/app/: config.py  database.py  main.py  schema.py
MS-Calendar/src/scripts/: __init__.py  seed_data.py
MS-User/: Dockerfile  Makefile  docker-compose.yml  package-lock.json  package.json
MS-User/src/: app.graphql  app.module.ts  main.ts
MS-User/src/users/: users.module.ts  users.resolver.ts  users.service.ts
MS-User/test/unit/: users.service.spec.ts
MS-Wallet/: Dockerfile  package-lock.json  package.json
MS-Wallet/src/: app.module.ts  main.ts  schema.gql
MS-Wallet/src/wallet/: wallet.controller.ts  wallet.model.ts  wallet.module.ts  wallet.resolver.ts  wallet.service.ts
ms-notifications/: Dockerfile  docker-compose.yml  package-lock.json  package.json
ms-notifications/src/: app.module.ts  main.ts
(+44 files in other folders)
