[project]
name = "ms-bet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "pika>=1.3.2",
    "strawberry-graphql[fastapi]>=0.283.3",
    "uvicorn>=0.38.0",
]
